Fix copyright visibility on page. Use bootstrap copyright icon. Add date.

--- a/client/app/drug-events/drug-events.less
+++ b/client/app/drug-events/drug-events.less
@@ -308,3 +308,7 @@
 .nav-tabs a {
   font-size: @font-size-h4;
 }
+
+.copyright {
+  position: relative;
+}
